# Install module
install(FILES init.lua DESTINATION ${TARANTOOL_INSTALL_LUADIR}/shard)
install(FILES connpool.lua DESTINATION ${TARANTOOL_INSTALL_LUADIR}/shard)
install(FILES merge.lua DESTINATION ${TARANTOOL_INSTALL_LUADIR}/shard)
install(FILES bheap.lua DESTINATION ${TARANTOOL_INSTALL_LUADIR}/shard)
